<resources>
    <string name="app_name">物联圈</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_message">此应用是一个介绍物联网的应用，并为物联网开发者提供一个交流咨询的平台</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="net_timeout">网络连接超时</string>
    <string name="net_failed">网络连接失败</string>
    <string name="data_error">数据错误</string>
    <string name="tap_load_more">点击查看详细内容</string>
    <string name="tap_load_less">点击查看缩略内容</string>
    <string name="ageing_time">48</string>
    <string name="logout_alert_msg">确定要退出登录吗？</string>
    <string name="login_username_alert">用户名不能为空</string>
    <string name="login_passwd_alert">密码不能为空</string>
    <string name="forum_display_null">版面为空</string>
    <string name="login_fail_more_than_five">您已经超出了登录失败限制次数，请等待 15 分钟后重试</string>
    <string name="new_post_success">发帖成功</string>
    <string name="new_post_fail_within_thirty_seconds">禁止三十秒内连续发帖</string>
    <string name="new_post_fail_within_five_minutes">禁止五分钟内发相同贴</string>

    <!-- 登录 -->
    <string name="title_main">实时信息交易平台</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="instruction">使用说明</string>

    <!-- 主界面 -->
    <string name="welcome">欢迎使用！</string>

    <!-- 注册 -->
    <string name="repassword">重复密码</string>
    <string name="register_title">注册</string>
    <string name="spin_prompt">联系方式</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="telephone">电话号码</string>

    <string-array name="communication_way">
        <item>手机号</item>
        <item>邮箱</item>
        <item>QQ</item>
        <item>微信</item>
        <item>其他</item>
    </string-array>

    <!-- 注册须知 -->
    <string name="titleOfInstrction">注册须知</string>
    <string name="agreement">怎么作为一个文件传入</string>
    <string name="agree">我同意</string>
    <string name="disagree">我不同意</string>
    <string name="next">下一步</string>
    <string name="goback">返回</string>

    <!-- 使用说明 -->
    <string name="content">	    1、用户必须提供真实的个人信息\n
	    </string>
    <string name="exit">退出</string>
    <string name="iot_splash">物联网技术交流平台</string>
    <string name="version">v1.1</string>
    <string name="news">新闻</string>
    <string name="note">笔记</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="release_blog">发表新主题</string>
    <string name="tip_blog">信息…… (6个字符以上)</string>
    <string name="blog_title_tip">标题:</string>
</resources>
