<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/title_header_color">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <ImageView
                android:id="@+id/newThreadBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_action_btn"
                android:clickable="true"
                android:contentDescription="@null"
                android:onClick="onBackBtnClick"
                android:padding="10dp"
                android:src="@mipmap/navigation_back" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@mipmap/segmentation" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:clickable="true"
                android:text="@string/release_blog"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/send_forum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/normal_action_btn"
            android:contentDescription="@null"
            android:onClick="onSubmitBtnClick"
            android:padding="10dp"
            android:src="@mipmap/social_send_now" />

    </RelativeLayout>

    <EditText
        android:id="@+id/add_forum_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/blog_title_tip" />

    <EditText
        android:id="@+id/add_forum_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/tip_blog"
        android:inputType="textMultiLine" />

</LinearLayout>